--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -27,7 +27,8 @@
       "@nuxt/types",
       "@nuxtjs/axios",
       "@nuxtjs/auth-next",
-      "@types/node"
+      "@types/node",
+      "@nuxtjs/i18n"
     ]
   },
   "exclude": [
